js,jquery projects, tictactoe

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>EXERCISE TITLE</title>
+    <script src="javascript/forloops.js"></script>
+    <script src="javascript/myscript.js"></script>
 </head>
 <body>
 <h1>Welcome to my Website!</h1>
