--- a/Hotel_Feedback_Form.html
+++ b/Hotel_Feedback_Form.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hotel Feedback Form</title>
+    <script src="javascript/arrays.js"></script>
+    <script src = "javascript/object_exercise.js"></script>
     <style>
         body {
             font-family: Arial, sans-serif;
