--- a/main.html
+++ b/main.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hotel Feedback Form</title>
+    <script src="javascript/functions.js"></script>
     <style>
         body {
             font-family: Arial, sans-serif;
