--- a/jquGames/main.html
+++ b/jquGames/main.html
@@ -2,9 +2,74 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>CONNECT FOUR</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <link rel="stylesheet" href="game.css">
+    <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
+    <script src="myscript.js"></script>
 </head>
 <body>
+    <div class="container" align="center">
+       <h1>Welcome to Connect Four!!!!</h1>
+        <h2>Connect 4 chips to win!!!!!!</h2>
+        <h2>Let's start!</h2>
 
+        <table class="board">
+            <tr>
+                <td><button type="button" ></button></td>
+                <td><button type="button" ></button></td>
+                <td><button type="button" ></button></td>
+                <td><button type="button" ></button></td>
+                <td><button type="button" ></button></td>
+                <td><button type="button" ></button></td>
+                <td><button type="button" ></button></td>
+            </tr>
+            <tr>
+                <td><button type="button" ></button></td>
+                <td><button type="button" ></button></td>
+                <td><button type="button" ></button></td>
+                <td><button type="button" ></button></td>
+                <td><button type="button" ></button></td>
+                <td><button type="button" ></button></td>
+                <td><button type="button" ></button></td>
+            </tr>
+            <tr>
+                <td><button type="button" ></button></td>
+                <td><button type="button" ></button></td>
+                <td><button type="button" ></button></td>
+                <td><button type="button" ></button></td>
+                <td><button type="button" ></button></td>
+                <td><button type="button" ></button></td>
+                <td><button type="button" ></button></td>
+            </tr>
+            <tr>
+                <td><button type="button" ></button></td>
+                <td><button type="button" ></button></td>
+                <td><button type="button" ></button></td>
+                <td><button type="button" ></button></td>
+                <td><button type="button" ></button></td>
+                <td><button type="button" ></button></td>
+                <td><button type="button" ></button></td>
+            </tr>
+            <tr>
+                <td><button type="button" ></button></td>
+                <td><button type="button" ></button></td>
+                <td><button type="button" ></button></td>
+                <td><button type="button" ></button></td>
+                <td><button type="button" ></button></td>
+                <td><button type="button" ></button></td>
+                <td><button type="button" ></button></td>
+            </tr>
+            <tr>
+                <td><button type="button" ></button></td>
+                <td><button type="button" ></button></td>
+                <td><button type="button" ></button></td>
+                <td><button type="button" ></button></td>
+                <td><button type="button" ></button></td>
+                <td><button type="button" ></button></td>
+                <td><button type="button" ></button></td>
+            </tr>
+    </table>
+  </div>
 </body>
 </html>
